--- a/index.html
+++ b/index.html
@@ -15,7 +15,37 @@
 <body>
     <header>
         <h1>Les monuments</h1>
+        <h2>Cliquez sur un monument ou son bouton pour obtenir une description</h2>
     </header>
+
+    <div class="btn">
+        <button onclick="showMonument('tour_eiffel')">Tour Eiffel</button>
+        <button onclick="showMonument('notre_dame')">Notre-Dame</button>
+        <button onclick="showMonument('arc_de_triomphe')">Arc de Triomphe</button>
+        <button onclick="showMonument('mont_saint_michel')">Mont Saint-Michel</button>
+        <button onclick="showMonument('versailles')">Versailles</button>
+    </div>
+
+    <div class="container">
+        <img src="./images/tour_eiffel.webp" onclick="showMonument('tour_eiffel')" alt="">
+        <img src="./images/notre_dame.webp" onclick="showMonument('notre_dame')" alt="">
+        <img src="./images/arc_de_triomphe.webp" onclick="showMonument('arc_de_triomphe')" alt="">
+        <img src="./images/mont_saint_michel.webp" onclick="showMonument('mont_saint_michel')" alt="">
+        <img src="./images/versailles.webp" onclick="showMonument('versailles')" alt="">
+    </div>
+
+    <section>
+        <div id="infos">
+            <h3 id="name"></h3>
+            <h4 id="city"></h3>
+            <p id="description"></p>
+
+        </div>
+    </section>
+
+
+
+
     <script type="text/javascript" src="script.js"></script>
 </body>
 
