[DONE]bonus_black&white

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
 
     <div class="container">
-        <img src="./images/tour_eiffel.webp" onclick="showMonument('tour_eiffel')" alt="">
-        <img src="./images/notre_dame.webp" onclick="showMonument('notre_dame')" alt="">
-        <img src="./images/arc_de_triomphe.webp" onclick="showMonument('arc_de_triomphe')" alt="">
-        <img src="./images/mont_saint_michel.webp" onclick="showMonument('mont_saint_michel')" alt="">
-        <img src="./images/versailles.webp" onclick="showMonument('versailles')" alt="">
+        <img id="img_tour_eiffel" src="./images/tour_eiffel.webp" onclick="showMonument('tour_eiffel')" alt="">
+        <img id="img_notre_dame" src="./images/notre_dame.webp" onclick="showMonument('notre_dame')" alt="">
+        <img id="img_arc_de_triomphe" src="./images/arc_de_triomphe.webp" onclick="showMonument('arc_de_triomphe')" alt="">
+        <img id="img_mont_saint_michel" src="./images/mont_saint_michel.webp" onclick="showMonument('mont_saint_michel')" alt="">
+        <img id="img_versailles" src="./images/versailles.webp" onclick="showMonument('versailles')" alt="">
     </div>
 
     <section>
