--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
 
     <div class="container">
-        <img id="img_tour_eiffel" src="./images/tour_eiffel.webp" onclick="showMonument('tour_eiffel')" alt="">
-        <img id="img_notre_dame" src="./images/notre_dame.webp" onclick="showMonument('notre_dame')" alt="">
-        <img id="img_arc_de_triomphe" src="./images/arc_de_triomphe.webp" onclick="showMonument('arc_de_triomphe')" alt="">
-        <img id="img_mont_saint_michel" src="./images/mont_saint_michel.webp" onclick="showMonument('mont_saint_michel')" alt="">
-        <img id="img_versailles" src="./images/versailles.webp" onclick="showMonument('versailles')" alt="">
+        <img id="img_tour_eiffel" src="./images/tour_eiffel.webp" onclick="showMonument('tour_eiffel')" alt="la tour eiffel">
+        <img id="img_notre_dame" src="./images/notre_dame.webp" onclick="showMonument('notre_dame')" alt="notre dame de paris">
+        <img id="img_arc_de_triomphe" src="./images/arc_de_triomphe.webp" onclick="showMonument('arc_de_triomphe')" alt="l'arc de triomphe">
+        <img id="img_mont_saint_michel" src="./images/mont_saint_michel.webp" onclick="showMonument('mont_saint_michel')" alt="le mont saint michel">
+        <img id="img_versailles" src="./images/versailles.webp" onclick="showMonument('versailles')" alt="château de versailles">
     </div>
 
     <section>
@@ -39,7 +39,7 @@
             <h3 id="name"></h3>
             <h4 id="city"></h3>
             <p id="description"></p>
-
+            <img id="img_france" src="" style="display: none; width: 500px; margin: 25px auto; display: block;">
         </div>
     </section>
 
