--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p id="description"></p>
             <!-- Conteneur pour l'image de la France et les marqueurs -->
             <div id="map-container">
-                <img id="img_france" src="">
+                <img id="img_france" src="" alt="carte de France">
                 <!-- Les marqueurs seront placés ici -->
                 <div id="marker" style="display: none; position: absolute; width: 30px; height: 30px; pointer-events: none;">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6" style="width: 100%; height: 100%; color: red;">
